# getexif

./: .gitignore  Cargo.toml  README.md
src/: Readme.md  main.rs
src/exif_reader/: mod.rs
