[package]
author = "Simon Werner <simonwerner@gmail.com>"
name = "getexif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
chrono = "0.4"
kamadak-exif = "0.5"
serde_json = "1.0"